Внес правки в класс InMemoryHistoryManager (в методе использовал связанный список LinkedList<>() вместо списка ArrayList<>()).